# queue-medic-dlq-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
config/: settings.py
docker/: docker-compose.yml
docs/: upstream_api_v1.md  upstream_api_v2.md
scripts/: seed_failure.sh
src/: dashboard.html  healing_agent.py  log_stream.py  main.py  mcp_server.py  rabbitmq_client.py  sandbox.py  target_db.py
tests/: test_healing.py  test_pipeline.py
