[project]
name = "queue-medic-dlq-mcp"
version = "0.1.0"
description = "Self-healing Dead Letter Queue system powered by Gemini 2.0 Flash and Model Context Protocol"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aio-pika>=9.4.3",
    "duckdb>=1.1.3",
    "fastmcp>=2.3.0",
    "google-genai>=1.16.0",
    "pydantic-settings>=2.6.0",
    "RestrictedPython>=7.4",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.1",
    "sse-starlette>=2.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "config"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
